[gd_scene load_steps=7 format=3 uid="uid://dwa0ujj6h26uq"]

[ext_resource type="Script" path="res://entities/tools/full_joint.gd" id="1_ock13"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th87n"]
albedo_color = Color(1, 0.337255, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ynbsx"]
material = SubResource("StandardMaterial3D_th87n")
top_radius = 0.05
bottom_radius = 0.05
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xuqj0"]
albedo_color = Color(0.309804, 0.560784, 0.423529, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_xovjw"]
material = SubResource("StandardMaterial3D_xuqj0")
top_radius = 0.05
bottom_radius = 0.05
height = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ki24o"]
height = 0.2
radius = 0.05

[node name="FullJoint" type="RigidBody3D"]
script = ExtResource("1_ock13")

[node name="Top" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("CylinderMesh_ynbsx")

[node name="Bottom" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
mesh = SubResource("CylinderMesh_xovjw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_ki24o")

[node name="JointSet2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.09, 0)

[node name="0" type="PinJoint3D" parent="JointSet2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.04, 0, 0)
node_a = NodePath("../..")

[node name="1" type="PinJoint3D" parent="JointSet2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0, 0)
node_a = NodePath("../..")

[node name="2" type="PinJoint3D" parent="JointSet2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.04)
node_a = NodePath("../..")

[node name="3" type="PinJoint3D" parent="JointSet2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.04)
node_a = NodePath("../..")

[node name="4" type="PinJoint3D" parent="JointSet2"]
node_a = NodePath("../..")

[node name="JointSet1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.09, 0)

[node name="0" type="PinJoint3D" parent="JointSet1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.04, 0, 0)
node_a = NodePath("../..")

[node name="1" type="PinJoint3D" parent="JointSet1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0, 0)
node_a = NodePath("../..")

[node name="2" type="PinJoint3D" parent="JointSet1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.04)
node_a = NodePath("../..")

[node name="3" type="PinJoint3D" parent="JointSet1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.04)
node_a = NodePath("../..")

[node name="4" type="PinJoint3D" parent="JointSet1"]
node_a = NodePath("../..")
